<resources>
    <string name="app_name">AppTurismoGO_2</string>
    <string name="Item_Inicio">Home</string>
    <string name="Item_vender">Publicar</string>
    <string name="Item_Mis_Anuncios">Mis Anuncios</string>
    <string name="Item_Cuenta">Mi Cuenta</string>
    <string name="Item_Chat">Chat</string>
    <string name="Titulo">TituloRL</string>
    <string name="Ingresar_Email">Ingresar con Email</string>
    <string name="Ingresar_Google">Ingresar con Google</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Txt_login">Login Usuario</string>
    <string name="Et_email">Email</string>
    <string name="Et_password">Password</string>
    <string name="Btn_ingresar">Ingresar</string>
    <string name="Txt_no_cuenta">¿No tienes una cuenta?</string>
    <string name="Txt_registrarme">REGISTRARME</string>

    <string name="Txt_registro">Registro de usuario</string>
    <string name="Et_repeat_password">Repetir contraseña</string>
    <string name="Btn_registrar">Registrar usuario</string>

    <string name="Btn_cerrar_sesion">Cerrar Sesión</string>

    <!--Crear Anuncio-->
    <string name = "Et_nombre"> Nombre del Anuncio</string>
    <string name = "Categoria"> Categoría</string>
    <string name = "Locación"> Locacion</string>
    <string name = "Et_precio"> Precio</string>
    <string name = "Et_descripción"> Descripción</string>
    <string name = "btn_Crear_Anuncio"> Crear Anuncio</string>

    <!--Mapas-->
    <string name="Txt_selec_ubicacion">Seleccione ubicación</string>
    <string name="Btn_listo">Listo</string>

    <!--Fragmento inicio-->
    <string name="Tv_locacion">Elija una locación</string>
    <string name="Et_buscar">Buscar </string>
    <string name="Txt_categoria">Categorias</string>
    <string name="Tv_categoria">Categoría</string>

<<<<<<< Updated upstream
    <!--Item anuncio-->
    <string name="Tv_titulo">Nombre del anuncio</string>
    <string name="Tv_descripcion">Descripción del anuncio, se podrá visualizar un máximo de 3 líneas</string>
    <string name="Tv_direccion">Direccion</string>
    <string name="Tv_simbolo_precio">S/</string>
    <string name="Tv_precio">00</string>
    <string name="Tv_fecha">dd/MM/yyyy</string>
=======
    <!-- Item anuncio -->
    <string name="Tv_titulo">Nombre del producto</string>
    <string name="Tv_nombres">Nombres completos</string>
    <string name="Tv_descripcion">Descripción del producto, se podrá visualizar un máximo de 3 líneas</string>
    <string name="Tv_direccion">Dirección</string>
    <string name="Tv_condicion">Nuevo</string>
    <string name="Tv_simbolo_precio">S/</string>
    <string name="Tv_precio">00</string>
    <string name="Tv_fecha">dd/MM/yyyy</string>
    <string name="Txt_detalle_info">Detalle del anuncio</string>
    <string name="Tv_cat">Categoría del anuncio</string>
    <string name="Txt_titulo">Titulo</string>
    <string name="Txt_descripcion">Descripción</string>
    <string name="Tv_descr">Descripción del anuncio</string>
    <string name="Txt_direccion">Dirección</string>
    <string name="Txt_vistas">Número de visitas del anuncio: </string>
    <string name="Tv_vistas">0</string>
    <string name="Txt_descr_vendedor">Descripción del vendedor</string>
    <string name="Txt_estado">Estado</string>
    <string name="Tv_estado">Disponible</string>

    <string name="Tv_nombres_comentario">Nombres</string>
    <string name="Tv_fecha_comentario">dd/MM/yyyy</string>
    <string name="Tv_comentario">Comentario del usuario</string>

    <!-- Opciones de detalle anuncio -->
    <!--<string name="Btn_mapa">Mapa</string>
    <string name="Btn_llamar">Llam.</string>
    <string name="Btn_sms">SMS</string>
    <string name="Btn_chat">Chat</string>-->
    <string name="imagenContadorTv">1/4</string>
>>>>>>> Stashed changes

</resources>