<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <!-- Declare binding variables here if needed -->
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Fragmentos.FragmentInicio">

        <!--Seleccionar una ubicación-->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp">

            <TextView
                android:id="@+id/Tv_locacion"
                android:text="@string/Tv_locacion"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/ic_locacion"
                android:drawablePadding="10dp"
                app:drawableEndCompat="@drawable/ic_siguiente"/>
        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5">

            <!--Buscar un anuncio-->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardUseCompatPadding="true"
                android:layout_weight="4"
                app:contentPadding="10dp">

                <EditText
                    android:id="@+id/Et_buscar"
                    android:hint="@string/Et_buscar"
                    app:drawableStartCompat="@drawable/ic_buscar"
                    android:drawablePadding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"/>
            </com.google.android.material.card.MaterialCardView>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:text="@string/Txt_categoria"
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Lista de categorias-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoriaRv"
            tools:listitem="@layout/item_categoria_inicio"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--Lista de anuncios-->
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_anuncio"
            android:layout_marginTop="5dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
